
0.29

  Added Gavin Carr's greylisting plugin

  Renamed config/ to config.sample/

  Qpsmtpd::Auth - document $mechanism option, improve fallback to generic
  hooks, document that auth-login works now, stash auth user and method for
  later use by Qpsmtpd::SMTP to generate authentication header.
  (Michael Toren)

  Qpsmtpd::SMTP - "MAIL FROM: <#@[]>" now works like qmail (null sender), 
  add LOGIN to default auth mechanisms, display auth user and method in
  Received: line instead of X-Qpsmtpd-Auth header.
  (Michael Toren)

  check_badmailfromto - NEW PLUGIN - like check_badmailfrom except matches
  both FROM: and TO:, and effectively makes it seem like the recipient 
  no longer exists for that sender (great for harassment cases).
  (John Peacock)

  check_earlytalker and require_resolvable_fromhost - short circuit test if
  whitelistclient is set. (Michael Toren)

  check_badmailfrom - Do not say why a given message is denied.
  (Michael Toren)

  dns_whitelist_soft - NEW PLUGIN - dns-based whitelist override for
  other qpsmtpd plugins.  Add suuport for whitelisthost to dnsbl.
  (John Peacock)

  auth/auth_vpopmail_sql - Support CRAM-MD5 (requires clear_passwd)
  (John Peacock)

  plugins/queue/qmail-queue - Added a timestamp and the qmail-queue qp
  identifier to the "Queued!" message, for compatibility with qmail-smtpd
  (Michael Toren)

  Support qmail-smtpd's timeoutsmtpd config file

  Many improvements to the forking server (qpsmtpd-forkserver)

  Plugin testing framework (Matt)

  Added Apache::Qpsmtpd (Apache/mod_perl 2.0 connection handler)

  Allow for multiple instances of a single plugin by using plugin:0
  notation (Robert)

  Fix CDB support so the server can work without it

  VRFY plugin support (Robert Spier)

  Added Makefile.PL etc to make it easier to build a package (Matt).

  Added Apache::Qpsmtpd to the distro.

  Make the distro follow the CPAN module style (Makefile.PL, MANIFEST, etc)
